--- a/es-client.yaml
+++ b/es-client.yaml
@@ -54,6 +54,8 @@ spec:
           value: "true"
         - name: "ES_JAVA_OPTS"
           value: "-Xms256m -Xmx256m"
+        - name: "NETWORK_HOST"
+          value: "0.0.0.0"
         ports:
         - containerPort: 9200
           name: http
