--- a/es-data.yaml
+++ b/es-data.yaml
@@ -1,5 +1,5 @@
-apiVersion: extensions/v1beta1
-kind: Deployment
+apiVersion: apps/v1beta1
+kind: StatefulSet
 metadata:
   name: es-data
   labels:
@@ -7,6 +7,7 @@ metadata:
     role: data
 spec:
   replicas: 2
+  serviceName: "elasticsearch-data"
   template:
     metadata:
       labels:
@@ -54,6 +55,8 @@ spec:
           value: "false"
         - name: "ES_JAVA_OPTS"
           value: "-Xms256m -Xmx256m"
+        - name: "NETWORK_HOST"
+          value: "0.0.0.0"
         ports:
         - containerPort: 9300
           name: transport
@@ -61,7 +64,15 @@ spec:
         volumeMounts:
         - name: storage
           mountPath: /data
-      volumes:
-          - emptyDir:
-              medium: ""
-            name: "storage"
+  volumeClaimTemplates:
+  - metadata:
+      name: storage
+      annotations:
+        volume.beta.kubernetes.io/storage-class: "es-data-storage"
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+          storage: 20Gi
+
+
