--- a/es-master.yaml
+++ b/es-master.yaml
@@ -47,7 +47,7 @@ spec:
         - name: "CLUSTER_NAME"
           value: "myesdb"
         - name: "NUMBER_OF_MASTERS"
-          value: "2"
+          value: "3"
         - name: NODE_MASTER
           value: "true"
         - name: NODE_INGEST
@@ -58,6 +58,8 @@ spec:
           value: "false"
         - name: "ES_JAVA_OPTS"
           value: "-Xms256m -Xmx256m"
+        - name: "NETWORK_HOST"
+          value: "0.0.0.0"
         ports:
         - containerPort: 9300
           name: transport
