--- a/es-client.yaml
+++ b/es-client.yaml
@@ -33,7 +33,7 @@ spec:
             add:
               - IPC_LOCK
               - SYS_RESOURCE
-        image: quay.io/pires/docker-elasticsearch-kubernetes:5.4.0
+        image: lambdalab/elasticsearch-xpack:5.4.0
         imagePullPolicy: Always
         env:
         - name: NAMESPACE
@@ -45,7 +45,9 @@ spec:
             fieldRef:
               fieldPath: metadata.name
         - name: "CLUSTER_NAME"
-          value: "myesdb"
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: NODE_MASTER
           value: "false"
         - name: NODE_DATA
@@ -53,7 +55,7 @@ spec:
         - name: HTTP_ENABLE
           value: "true"
         - name: "ES_JAVA_OPTS"
-          value: "-Xms256m -Xmx256m"
+          value: "-Xms512m -Xmx512m"
         - name: "NETWORK_HOST"
           value: "0.0.0.0"
         ports:
