--- a/es-data.yaml
+++ b/es-data.yaml
@@ -6,7 +6,7 @@ metadata:
     component: elasticsearch
     role: data
 spec:
-  replicas: 2
+  replicas: 3
   serviceName: "elasticsearch-data"
   template:
     metadata:
@@ -34,7 +34,7 @@ spec:
             add:
               - IPC_LOCK
               - SYS_RESOURCE
-        image: quay.io/pires/docker-elasticsearch-kubernetes:5.4.0
+        image: lambdalab/elasticsearch-xpack:5.4.0
         imagePullPolicy: Always
         env:
         - name: NAMESPACE
@@ -46,7 +46,9 @@ spec:
             fieldRef:
               fieldPath: metadata.name
         - name: "CLUSTER_NAME"
-          value: "myesdb"
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: NODE_MASTER
           value: "false"
         - name: NODE_INGEST
@@ -54,7 +56,7 @@ spec:
         - name: HTTP_ENABLE
           value: "false"
         - name: "ES_JAVA_OPTS"
-          value: "-Xms256m -Xmx256m"
+          value: "-Xms512m -Xmx512m"
         - name: "NETWORK_HOST"
           value: "0.0.0.0"
         ports:
@@ -73,6 +75,6 @@ spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
         requests:
-          storage: 20Gi
+          storage: 30Gi
 
 
