--- a/es-svc.yaml
+++ b/es-svc.yaml
@@ -6,7 +6,7 @@ metadata:
     component: elasticsearch
     role: client
 spec:
-  type: LoadBalancer
+  type: clusterIP
   selector:
     component: elasticsearch
     role: client
