--- a/es-curator-config.yaml
+++ b/es-curator-config.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: curator-config
+  namespace: {{ namespace }}
 data:
   action_file.yml: |-
     ---
