--- a/es-data.yaml
+++ b/es-data.yaml
@@ -5,6 +5,19 @@ metadata:
   labels:
     component: elasticsearch
     role: data
+  namespace: {{ namespace }}
+  annotations:
+    pod.beta.kubernetes.io/init-containers: '[
+      {
+      "name": "sysctl",
+        "image": "busybox",
+        "imagePullPolicy": "IfNotPresent",
+        "command": ["sysctl", "-w", "vm.max_map_count=262144"],
+        "securityContext": {
+          "privileged": true
+        }
+      }
+    ]'
 spec:
   replicas: 3
   serviceName: "elasticsearch-data"
@@ -13,18 +26,6 @@ spec:
       labels:
         component: elasticsearch
         role: data
-      annotations:
-        pod.beta.kubernetes.io/init-containers: '[
-          {
-          "name": "sysctl",
-            "image": "busybox",
-            "imagePullPolicy": "IfNotPresent",
-            "command": ["sysctl", "-w", "vm.max_map_count=262144"],
-            "securityContext": {
-              "privileged": true
-            }
-          }
-        ]'
     spec:
       containers:
       - name: es-data
@@ -56,9 +57,12 @@ spec:
         - name: HTTP_ENABLE
           value: "false"
         - name: "ES_JAVA_OPTS"
-          value: "-Xms512m -Xmx512m"
+          value: "-Xms8g -Xmx8g"
         - name: "NETWORK_HOST"
           value: "0.0.0.0"
+        resources:
+          requests:
+            memory: 8Gi
         ports:
         - containerPort: 9300
           name: transport
@@ -75,6 +79,6 @@ spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
         requests:
-          storage: 30Gi
+          storage: 50Gi
 
 
