--- a/es-svc.yaml
+++ b/es-svc.yaml
@@ -6,11 +6,14 @@ metadata:
     component: elasticsearch
     role: client
 spec:
-  type: clusterIP
+  type: ClusterIP
   selector:
     component: elasticsearch
     role: client
   ports:
   - name: http
     port: 9200
+    protocol: TCP
+  - name: transport
+    port: 9300
     protocol: TCP
