--- a/es-discovery-svc.yaml
+++ b/es-discovery-svc.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     component: elasticsearch
     role: master
+  namespace: {{ namespace }}
 spec:
   selector:
     component: elasticsearch
