fix(k8): Add affinity to elasticsearch data/client/curator node.

--- a/es-curator.yaml
+++ b/es-curator.yaml
@@ -3,6 +3,25 @@ kind: CronJob
 metadata:
   name: curator
   namespace: {{ namespace }}
+  annotations:
+    scheduler.alpha.kubernetes.io/affinity: >
+        {
+          "nodeAffinity": {
+            "preferredDuringSchedulingIgnoredDuringExecution": {
+              "nodeSelectorTerms": [
+                {
+                  "matchExpressions": [
+                    {
+                      "key": "NodeType",
+                      "operator": "In",
+                      "values": ["{{ preferred_node }}"]
+                    }
+                  ]
+                }
+              ]
+            }
+          }
+        }
 spec:
   schedule: 1 0 * * *
   jobTemplate:
