--- a/es-client.yaml
+++ b/es-client.yaml
@@ -18,6 +18,24 @@ metadata:
         }
       }
     ]'
+    scheduler.alpha.kubernetes.io/affinity: >
+        {
+          "nodeAffinity": {
+            "preferredDuringSchedulingIgnoredDuringExecution": {
+              "nodeSelectorTerms": [
+                {
+                  "matchExpressions": [
+                    {
+                      "key": "NodeType",
+                      "operator": "In",
+                      "values": ["{{ preferred_node }}"]
+                    }
+                  ]
+                }
+              ]
+            }
+          }
+        }
 spec:
   replicas: 2
   template:
