--- a/es-curator-config.yaml
+++ b/es-curator-config.yaml
@@ -6,50 +6,51 @@ metadata:
 data:
   action_file.yml: |-
     ---
-    1:
-      action: delete_indices
-      description: >-
-        Delete indices older than 30 days (based on index name), for logstash-
-        prefixed indices. Ignore the error if the filter does not result in an
-        actionable list of indices (ignore_empty_list) and exit cleanly.
-      options:
-        ignore_empty_list: True
-        timeout_override:
-        continue_if_exception: False
-      filters:
-      - filtertype: pattern
-        kind: prefix
-        value: logstash-
-        exclude:
-      - filtertype: age
-        source: name
-        direction: older
-        timestring: '%Y.%m.%d'
-        unit: days
-        unit_count: 30
-        exclude:
-    2:
-      action: delete_indices
-      description: >-
-        Delete indices older than 30 days (based on index name), for zipkin-
-        prefixed indices. Ignore the error if the filter does not result in an
-        actionable list of indices (ignore_empty_list) and exit cleanly.
-      options:
-        ignore_empty_list: True
-        timeout_override:
-        continue_if_exception: False
-      filters:
-      - filtertype: pattern
-        kind: prefix
-        value: zipkin-
-        exclude:
-      - filtertype: age
-        source: name
-        direction: older
-        timestring: '%Y-%m-%d'
-        unit: days
-        unit_count: 30
-        exclude:
+    actions:
+      1:
+        action: delete_indices
+        description: >-
+          Delete indices older than 30 days (based on index name), for logstash-
+          prefixed indices. Ignore the error if the filter does not result in an
+          actionable list of indices (ignore_empty_list) and exit cleanly.
+        options:
+          ignore_empty_list: True
+          timeout_override:
+          continue_if_exception: False
+        filters:
+        - filtertype: pattern
+          kind: prefix
+          value: logstash-
+          exclude:
+        - filtertype: age
+          source: name
+          direction: older
+          timestring: '%Y.%m.%d'
+          unit: days
+          unit_count: 30
+          exclude:
+      2:
+        action: delete_indices
+        description: >-
+          Delete indices older than 30 days (based on index name), for zipkin-
+          prefixed indices. Ignore the error if the filter does not result in an
+          actionable list of indices (ignore_empty_list) and exit cleanly.
+        options:
+          ignore_empty_list: True
+          timeout_override:
+          continue_if_exception: False
+        filters:
+        - filtertype: pattern
+          kind: prefix
+          value: zipkin-
+          exclude:
+        - filtertype: age
+          source: name
+          direction: older
+          timestring: '%Y-%m-%d'
+          unit: days
+          unit_count: 30
+          exclude:
   config.yml: |-
     ---
     # Remember, leave a key empty if there is no value.  None will be a string,
