Fix master pod node colocation

--- a/es-master.yaml
+++ b/es-master.yaml
@@ -56,7 +56,7 @@ spec:
                         {
                           "key": "role",
                           "operator": "In",
-                          "values": ["data"]
+                          "values": ["master"]
                         }
                       ]
                     },
