--- a/es-curator.yaml
+++ b/es-curator.yaml
@@ -3,31 +3,14 @@ kind: CronJob
 metadata:
   name: curator
   namespace: {{ namespace }}
-  annotations:
-    scheduler.alpha.kubernetes.io/affinity: >
-        {
-          "nodeAffinity": {
-            "preferredDuringSchedulingIgnoredDuringExecution": {
-              "nodeSelectorTerms": [
-                {
-                  "matchExpressions": [
-                    {
-                      "key": "NodeType",
-                      "operator": "In",
-                      "values": ["{{ preferred_node }}"]
-                    }
-                  ]
-                }
-              ]
-            }
-          }
-        }
 spec:
   schedule: 1 0 * * *
   jobTemplate:
     spec:
       template:
         spec:
+          nodeSelector:
+            NodeType: {{ preferred_node }}
           containers:
           - name: curator
             image: bobrik/curator
