--- a/es-master.yaml
+++ b/es-master.yaml
@@ -25,47 +25,25 @@ spec:
             }
           }
         ]'
-        scheduler.alpha.kubernetes.io/affinity: >
-            {
-              "nodeAffinity": {
-                "requiredDuringSchedulingIgnoredDuringExecution": {
-                  "nodeSelectorTerms": [
-                    {
-                      "matchExpressions": [
-                        {
-                          "key": "NodeType",
-                          "operator": "In",
-                          "values": ["{{ preferred_node }}"]
-                        }
-                      ]
-                    }
-                  ]
-                }
-              },
-              "podAntiAffinity": {
-                "preferredDuringSchedulingIgnoredDuringExecution": [
-                  {
-                    "weight": 50,
-                    "labelSelector": {
-                      "matchExpressions": [
-                        {
-                          "key": "component",
-                          "operator": "In",
-                          "values": ["elasticsearch"]
-                        },
-                        {
-                          "key": "role",
-                          "operator": "In",
-                          "values": ["master"]
-                        }
-                      ]
-                    },
-                    "topologyKey": "kubernetes.io/hostname"
-                 }
-                ]
-              }
-            }
     spec:
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 50
+            podAffinityTerm: 
+              labelSelector:
+                matchExpressions:
+                - key: component
+                  operator: In
+                  values:
+                  - elasticsearch
+                - key: role
+                  operator: In
+                  values:
+                  - master
+              topologyKey: kubernetes.io/hostname
+      nodeSelector:
+        NodeType: {{ preferred_node }}
       containers:
       - name: es-master
         resources:
