--- a/es-data.yaml
+++ b/es-data.yaml
@@ -8,6 +8,8 @@ metadata:
   namespace: {{ namespace }}
 spec:
   replicas: 3
+  updateStrategy:
+    type: RollingUpdate
   serviceName: "elasticsearch-data"
   template:
     metadata:
